cargo-features = ["edition2021"]
[package]
name = "simple_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
clap = { version = "2.33.3", features = ["yaml", "unstable"] }
bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"